hphp/hack/test/typecheck/naming_fail_foreach.php.exp
File "naming_fail_foreach.php", line 7, characters 8-9:
Variable $z is undefined, or there exists at least one control flow path reaching this point which does not define $z. (Naming[2050])
